# WMT-MEX-ConversationalAI

./: README.md  sample_cons_mx_cust_omni_chnl_vw.csv  sample_cons_rfm_omni_mthly.csv  sample_cust_omni_disp_journey.csv  sample_cust_omni_disp_linked.csv
milvus-lite/: clean_data.py  milvus_data.json  milvus_db.db  milvus_db_utils.py  milvus_schema.json
python/: README.md
python/agents/: README.md  pyproject.toml
python/agents/data-science/: ENVEXAMPLE
python/agents/data_science/: prompts.py
python/agents/data_science/sub_agents/bigquery/: tools.py
python/agents/data_science_powerpoint/: POWERPOINT_RAG_SETUP.md  pyproject.toml
python/agents/data_science_powerpoint/data_science/: agent.py  envExample  prompts.py  tools.py
python/agents/data_science_powerpoint/data_science/utils/: pptx_rag.py
python/agents/data_science_v2/: EXAMPLES.md  README.md
python/agents/data_science_v2/data_science/: agent.py  envExample  tools.py
python/agents/data_science_v2/data_science/sub_agents/bigquery/: tools.py
python/agents/data_science_v2/data_science/sub_agents/bqml/: agent.py
python/agents/product_retail_agent/: README.md  pyproject.toml
python/agents/product_retail_agent/deployment/: deploy.py
python/agents/product_retail_agent/eval/: test_eval.py
python/agents/product_retail_agent/product_retail/: ENVEXAMPLE  agent.py  milvus_utils.py  prompts.py  tools.py
python/agents/product_retail_agent/product_retail/sub_agents/analytics/: agent.py
python/agents/product_retail_agent/product_retail/sub_agents/bigquery/: agent.py  tools.py
python/agents/product_retail_agent/product_retail/sub_agents/bqml/: agent.py
python/agents/product_retail_agent/product_retail/utils/: create_bq_table.py
python/agents/product_retail_agent/tests/: test_agents.py
python/powerpoint_rag_service/: gcs_ingestion.py  main.py  pptx_reader.py  pyproject.toml  vertex_vector_search.py
